Criando uma tela MODAL para pesquisar e editar com END-POINT

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -89,8 +89,55 @@
 <script type="text/javascript">
 
 
-    function salvarUsuario(){
+    function colocarEmEdicao(id){
 
+        $.ajax({
+                method: "GET",
+                url: "buscaruserid",
+                data: { iduser : id },
+                success: function (response) {
+
+                    $("#id").val(response.id);
+                    $("#nome").val(response.nome);
+                    $("#idade").val(response.idade);
+
+                    $("#modalPesquisar").modal("hide");
+
+                },
+                error: function (xhr, status, errorThrown) {
+                    alert("Erro ao buscar por id:" + xhr.responseText);
+                }
+            });
+
+
+
+    }
+
+
+    function pesquisaUser() {
+    var nome = $('#nomeBusca').val();
+
+    if (nome != null && nome.trim() != "") {
+        $.ajax({
+            method: "GET",
+            url: "buscarPorNome",
+            data: { nome: nome }, // Corrigido para passar os dados como um objeto
+            success: function (response) {
+                $("#tabelaResultados > tbody > tr").remove();
+
+                for (var i = 0; i < response.length; i++) {
+                    $("#tabelaResultados > tbody").append("<tr><td>" + response[i].id + "</td><td>" + response[i].nome + "</td><td><button type='button' onclick = 'colocarEmEdicao("+response[i].id+")' class='btn btn-warning'>Visualizar</button></td></tr>");
+
+                }
+            },
+            error: function (xhr, status, errorThrown) {
+                alert("Erro ao buscar por nome:" + xhr.responseText);
+            }
+        });
+    }
+}
+
+    function salvarUsuario() {
         var id = $("#id").val();
         var nome = $("#nome").val();
         var idade = $("#idade").val();
@@ -98,19 +145,18 @@
         $.ajax({
             method: "POST",
             url: "salvar",
-            data: JSON.stringify({id: id, nome : nome, idade : idade}),
+            data: JSON.stringify({ id: id, nome: nome, idade: idade }),
             contentType: "application/json; charset=utf-8",
             success: function (response) {
                 $("#id").val(response.id);
                 alert("Gravou com sucesso!");
             },
-            error: function(xhr, status, errorThrown) {
+            error: function (xhr, status, errorThrown) {
                 alert("Erro ao salvar usuário:" + xhr.responseText);
             }
         });
-
-
     }
+
 </script>
 
 </body>
