--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -35,7 +35,9 @@
 
 <button type="button" class="btn btn-secondary" onclick="document.getElementById('formCadastroUser').reset();">Novo</button>
 
-<button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#modalPesquisar">Pesquisar</button>
+<button type="button" class="btn btn-warning" data-bs-toggle="modal" data-bs-target="#modalPesquisar">Pesquisar</button>
+
+<button type="button" class="btn btn-danger" onclick="botaoDeletarTela()">Excluir</button>
 
 
 
@@ -63,6 +65,7 @@
                         <th scope="col">ID</th>
                         <th scope="col">Nome</th>
                         <th scope="col">Editar</th>
+                        <th scope="col">Excluir</th>
                     </tr>
                     </thead>
                     <tbody>
@@ -73,7 +76,7 @@
 
             </div>
             <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fechar</button>
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal" onclick="document.getElementById('formCadastroUser').reset();">Fechar</button>
 
             </div>
         </div>
@@ -87,6 +90,37 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 
 <script type="text/javascript">
+
+    function botaoDeletarTela(){
+
+        var id = $('#id').val();
+        deleteUser(id);
+        document.getElementById('formCadastroUser').reset();
+
+
+
+    }
+
+
+    function deleteUser(id){
+       if(confirm('Tem certeza que deseja excluir?')){
+           $.ajax({
+                    method: "DELETE",
+                    url: "delete",
+                    data: { iduser : id },
+                    success: function (response) {
+
+                        $('#' + id).remove();
+
+                        alert(response);
+
+                    },
+                    error: function (xhr, status, errorThrown) {
+                        alert("Erro ao deletar usuário por id:" + xhr.responseText);
+                    }
+                });
+       }
+    }
 
 
     function colocarEmEdicao(id){
@@ -126,7 +160,7 @@
                 $("#tabelaResultados > tbody > tr").remove();
 
                 for (var i = 0; i < response.length; i++) {
-                    $("#tabelaResultados > tbody").append("<tr><td>" + response[i].id + "</td><td>" + response[i].nome + "</td><td><button type='button' onclick = 'colocarEmEdicao("+response[i].id+")' class='btn btn-warning'>Visualizar</button></td></tr>");
+                    $("#tabelaResultados > tbody").append("<tr id= '"+response[i].id+"'><td>" + response[i].id + "</td><td>" + response[i].nome + "</td><td><button type='button' onclick = 'colocarEmEdicao("+response[i].id+")' class='btn btn-warning'>Visualizar</button></td><td><button type='button' onclick= 'deleteUser("+response[i].id+")' class='btn btn-danger'>Excluir</button></td></tr>");
 
                 }
             },
