--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -6,6 +6,19 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+
+    <style>
+
+        html{
+
+            margin-left: 5%;
+            margin-right: 30%;
+            margin-top: 5%;
+
+        }
+
+    </style>
+
 </head>
 <body>
 
@@ -26,7 +39,7 @@
 
     <div class="mb-3">
         <label for="idade" class="form-label">idade do usuário</label>
-        <input type="number" class="form-control" id="idade">
+        <input type="number" class="form-control" id="idade" required ="required">
     </div>
 
 </form>
@@ -58,21 +71,22 @@
                     <button type="button" class="btn btn-success" onclick="pesquisaUser()">Buscar</button>
 
                 </form>
+                <div style="height: 300px;overflow: scroll;">
+                    <table class="table" id="tabelaResultados">
+                        <thead>
+                            <tr>
+                                <th scope="col">ID</th>
+                                <th scope="col">Nome</th>
+                                <th scope="col">Editar</th>
+                                <th scope="col">Excluir</th>
+                            </tr>
+                        </thead>
 
-                <table class="table" id="tabelaResultados">
-                    <thead>
-                    <tr>
-                        <th scope="col">ID</th>
-                        <th scope="col">Nome</th>
-                        <th scope="col">Editar</th>
-                        <th scope="col">Excluir</th>
-                    </tr>
-                    </thead>
-                    <tbody>
+                        <tbody>
+                        </tbody>
 
-
-                    </tbody>
-                </table>
+                    </table>
+                </div>
 
             </div>
             <div class="modal-footer">
@@ -94,11 +108,11 @@
     function botaoDeletarTela(){
 
         var id = $('#id').val();
+
+        if(id != null && id.trim() != "") {
         deleteUser(id);
         document.getElementById('formCadastroUser').reset();
-
-
-
+        }
     }
 
 
@@ -172,9 +186,24 @@
 }
 
     function salvarUsuario() {
+
+
+
         var id = $("#id").val();
         var nome = $("#nome").val();
         var idade = $("#idade").val();
+
+        if(nome == null || nome.trim() == ""){
+            $("#nome").focus();
+            alert('informe o nome');
+            return;
+        }
+
+        if(idade == null || idade.trim() == ""){
+            $("#idade").focus();
+            alert('informe a idade');
+            return;
+        }
 
         $.ajax({
             method: "POST",
